# bear-things-sync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: RELEASE_SETUP.md
docs/plans/: 2025-11-03-bidirectional-sync-design.md  2025-11-03-embedding-deduplication-design.md
scripts/: watch_bear.sh  watch_sync.sh
src/bear_things_sync/: __init__.py  __main__.py  bear.py  cli.py  config.py  embeddings.py  install.py  reset.py  sync.py  things.py  things_db.py  uninstall.py  utils.py  watch.py
templates/: daemon.plist.template
tests/: test_bear.py  test_cli.py  test_embeddings.py  test_reset.py  test_sync.py  test_things.py  test_utils.py
